python/testData/highlighting/fStringBackslashesBefore312.py
f'{<error descr="Expression expected"><error descr="Python version 3.6 does not allow backslashes inside expression parts of f-strings">\</error>t</error>}'
f'{<error descr="Expression expected"><error descr="Python version 3.6 does not allow backslashes inside expression parts of f-strings">\</error>N{GREEK SMALL LETTER ALPHA}</error>}'
f'{Formatable():\n\t}'
f'{42:{<error descr="Expression expected"><error descr="Python version 3.6 does not allow backslashes inside expression parts of f-strings">\</error>t</error>}}'
f'{f"""{"<error descr="Python version 3.6 does not allow backslashes inside expression parts of f-strings">\</error>n"}"""}'
f'{<error descr="Expression expected"><error descr="Python version 3.6 does not allow backslashes inside expression parts of f-strings">\</error>n<error descr="Python version 3.6 does not allow nesting of string literals with the same quote type inside f-strings">'</error><error descr="Python version 3.6 does not allow new lines in expression parts of non-triple-quoted f-strings">
</error></error><EOLError descr="Type conversion, ':' or '}' expected"></EOLError><EOLError descr="' expected"></EOLError>